# HW27_2_project

./: .coverage  .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_rename_course_preview_lesson_lesson_preview_and_more.py  0003_remove_lesson_course_course_lesson.py  0004_remove_course_lesson_lesson_course.py  0005_course_owner_lesson_owner.py  0006_subscription.py  0007_course_is_course_updated.py  0008_remove_course_is_course_updated.py  0009_course_is_course_updated.py  0010_remove_course_is_course_updated.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: fillpaym.py  fillusers.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_options_payments_payment_link_and_more.py
